discussion/kv_engine/128640/128640_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Move server_stats to StatCollector interface

Change-Id: I0036d990c26f1a1607def6841ed85610bbde5bc2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-07-06 16:16:55.000000000
Message: 
Uploaded patch set 12: Patch Set 11 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-06 17:14:06.000000000
Message: 
Patch Set 12: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25044/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25044/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3220/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:6: error: use of undeclared identifier "ep_storage_age" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:22: error: use of undeclared identifier "microseconds" [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:36: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:38: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:40: error: expected expression [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:41: error: expected ";" after top level declarator [clang-diagnostic-error]
STAT(ep_storage_age, microseconds, , , )
                                        ^
                                        ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3220/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:64:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3220/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1727/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
